@@ -25,7 +25,6 @@ import org.apache.commons.collections4.multimap.ArrayListValuedHashMap;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.math.NumberUtils;
-import org.apache.commons.lang3.mutable.MutableInt;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.fhcrc.cpas.exp.xml.SimpleTypeNames;
@@ -201,7 +200,7 @@ import static org.labkey.api.exp.api.ExpProtocol.ApplicationType.ProtocolApplica
 import static org.labkey.api.exp.api.NameExpressionOptionService.NAME_EXPRESSION_REQUIRED_MSG;
 import static org.labkey.api.exp.api.ProvenanceService.PROVENANCE_PROTOCOL_LSID;
 
-public class ExperimentServiceImpl implements ExperimentService, ObjectReferencer
+public class ExperimentServiceImpl implements ExperimentService, ObjectReferencer, SearchService.DocumentProvider
 {
     private static final Logger LOG = LogHelper.getLogger(ExperimentServiceImpl.class, "Experiment infrastructure including maintaining runs and lineage");
 
@@ -276,14 +275,14 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     }
 
     @Override
-    public HttpView createRunExportView(Container container, String defaultFilenamePrefix)
+    public HttpView<?> createRunExportView(Container container, String defaultFilenamePrefix)
     {
         ActionURL postURL = new ActionURL(ExperimentController.ExportRunsAction.class, container);
         return new JspView<>("/org/labkey/experiment/XARExportOptions.jsp", new ExperimentController.ExportBean(LSIDRelativizer.FOLDER_RELATIVE, XarExportType.BROWSER_DOWNLOAD, defaultFilenamePrefix + ".xar", new ExperimentController.ExportOptionsForm(), null, postURL));
     }
 
     @Override
-    public HttpView createFileExportView(Container container, String defaultFilenamePrefix)
+    public HttpView<?> createFileExportView(Container container, String defaultFilenamePrefix)
     {
         Set<String> roles = getDataInputRoles(container, ContainerFilter.current(container));
         // Remove case-only dupes
@@ -517,7 +516,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     @Override
     public @NotNull List<ExpDataImpl> getExpDatasByLSID(Collection<String> lsids)
     {
-        if (lsids.size() == 0)
+        if (lsids.isEmpty())
             return Collections.emptyList();
         return ExpDataImpl.fromDatas(new TableSelector(getTinfoData(), new SimpleFilter(FieldKey.fromParts("LSID"), lsids, IN), null).getArrayList(Data.class));
     }
@@ -525,7 +524,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     @Override
     public @NotNull List<ExpDataImpl> getExpDatas(Collection<Integer> rowids)
     {
-        if (rowids.size() == 0)
+        if (rowids.isEmpty())
             return Collections.emptyList();
         return ExpDataImpl.fromDatas(new TableSelector(getTinfoData(), new SimpleFilter(FieldKey.fromParts("RowId"), rowids, IN), null).getArrayList(Data.class));
     }
@@ -533,7 +532,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     @Override
     public @NotNull List<? extends ExpData> getExpDatas(ExpDataClass dataClass, Collection<Integer> rowIds)
     {
-        if (rowIds.size() == 0)
+        if (rowIds.isEmpty())
             return Collections.emptyList();
         SimpleFilter filter = new SimpleFilter(FieldKey.fromParts("RowId"), rowIds, IN);
         filter.addCondition(FieldKey.fromParts("classId"), dataClass.getRowId());
@@ -785,7 +784,45 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
     private static final int INDEXING_LIMIT = 10_000;
 
-    public void indexMaterials(final @NotNull SearchService.IndexTask task, final @NotNull Container container, final Date modifiedSince)
+    @Override
+    public void enumerateDocuments(final @NotNull SearchService.IndexTask task, final @NotNull Container c, final Date modifiedSince)
+    {
+        task.addRunnable(() -> {
+            for (ExpSampleTypeImpl sampleType : getIndexableSampleTypes(c, modifiedSince))
+            {
+                sampleType.index(task);
+            }
+        }, SearchService.PRIORITY.bulk);
+
+        task.addRunnable(() -> indexMaterials(task, c, modifiedSince), SearchService.PRIORITY.bulk);
+
+        task.addRunnable(() -> {
+            for (ExpDataClassImpl dataClass : getIndexableDataClasses(c, modifiedSince))
+            {
+                dataClass.index(task);
+            }
+        }, SearchService.PRIORITY.bulk);
+
+        task.addRunnable(() -> indexData(task, c, modifiedSince), SearchService.PRIORITY.bulk);
+    }
+
+    @Override
+    public void indexDeleted()
+    {
+        List<TableInfo> indexedTables = List.of(getTinfoSampleType(),
+                getTinfoDataClass(),
+                getTinfoMaterial(),
+                getTinfoData());
+
+        // Clear the last indexed value on all tables that back a search document
+        for (TableInfo indexedTable : indexedTables)
+        {
+            new SqlExecutor(ExperimentService.get().getSchema()).execute("UPDATE " + indexedTable +
+                    " SET LastIndexed = NULL WHERE LastIndexed IS NOT NULL");
+        }
+    }
+
+    private void indexMaterials(final @NotNull SearchService.IndexTask task, final @NotNull Container container, final Date modifiedSince)
     {
         // Big hack to prevent indexing study specimens and bogus samples created from some plate assays (Issue 46037). Also in ExpMaterialImpl.index()
         SQLFragment sql = new SQLFragment("SELECT * FROM " + getTinfoMaterial() + " _m_  WHERE Container = ? AND LSID NOT LIKE '%:"
@@ -805,6 +842,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         if (rowCount == INDEXING_LIMIT)
         {
+            // Requeue for the next batch. This avoids overwhelming the indexer's queue with documents
             task.addRunnable(() -> indexMaterials(task, container, modifiedSince), SearchService.PRIORITY.bulk);
         }
     }
@@ -828,6 +866,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         if (rowCount == INDEXING_LIMIT)
         {
+            // Requeue for the next batch. This avoids overwhelming the indexer's queue with documents
             task.addRunnable(() -> indexData(task, container, modifiedSince), SearchService.PRIORITY.bulk);
         }
     }
@@ -841,7 +880,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return ExpDataClassImpl.fromDataClasses(new SqlSelector(getSchema(), sql).getArrayList(DataClass.class));
     }
 
-    public Collection<ExpSampleTypeImpl> getIndexableSampleTypes(Container container, @Nullable Date modifiedSince)
+    private Collection<ExpSampleTypeImpl> getIndexableSampleTypes(@NotNull Container container, @Nullable Date modifiedSince)
     {
         SQLFragment sql = new SQLFragment("SELECT * FROM " + getTinfoSampleType() + " _st_ WHERE Container = ?").add(container.getId());
         SQLFragment modifiedSQL = new SearchService.LastIndexedClause(getTinfoSampleType(), modifiedSince, "_st_").toSQLFragment(null, null);
@@ -1046,7 +1085,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return toExpProtocol(p);
     }
 
-    @NotNull
     private ExpProtocolImpl toExpProtocol(@Nullable Protocol p)
     {
         ExpProtocolImpl result = p == null ? null : new ExpProtocolImpl(p);
@@ -1412,7 +1450,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
 
         // Do the sort on the Java side to make sure it's always case-insensitive, even on Postgres
-        return classes.stream().map(ExpDataClassImpl::new).sorted().collect(Collectors.toUnmodifiableList());
+        return classes.stream().map(ExpDataClassImpl::new).sorted().toList();
     }
 
     @Override
@@ -1690,7 +1728,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             // ignore
         }
-        if (0 < errors.length())
+        if (!errors.isEmpty())
             throw new ValidationException(errors.toString());
         return null;
     }
@@ -1743,7 +1781,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             // ignore
         }
-        if (0 < errors.length())
+        if (!errors.isEmpty())
             throw new ValidationException(errors.toString());
 
         return null;
@@ -1986,7 +2024,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             return null;
 
         String objectId = lsid.getObjectId();
-        if (objectId == null || objectId.length() == 0)
+        if (objectId == null || objectId.isEmpty())
             return null;
 
         String[] parts = StringUtils.split(objectId, ".");
@@ -2077,7 +2115,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             return null;
 
         String objectId = lsid.getObjectId();
-        if (objectId == null || objectId.length() == 0)
+        if (objectId == null || objectId.isEmpty())
             return null;
 
         String[] parts = StringUtils.split(objectId, ".");
@@ -8347,12 +8385,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return new ArrayList<>(runsDeletedWithInput(runsUsingItems));
     }
 
-    @Override
-    public boolean useUXDomainDesigner()
-    {
-        return AppProps.getInstance().isExperimentalFeatureEnabled(EXPERIMENTAL_DOMAIN_DESIGNER);
-    }
-
     /*
     * this is used to register a query view in experiment-ShowRunText.view and this expects
     * the query to have RunId column
@@ -8664,7 +8696,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     @Override
     public void addEdges(Collection<ExpLineageEdge> edges)
     {
-        if (edges == null || edges.size() == 0)
+        if (edges == null || edges.isEmpty())
             return;
 
         List<List<?>> params = new ArrayList<>();
@@ -9204,7 +9236,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             TableInfo tableInfo = samplesUserSchema.getTable(type.getName());
             if (tableInfo == null)
                 continue;
-            List<ColumnInfo> uniqueIdCols = provisioned.getColumns().stream().filter(ColumnInfo::isScannableField).collect(Collectors.toList());
+            List<ColumnInfo> uniqueIdCols = provisioned.getColumns().stream().filter(ColumnInfo::isScannableField).toList();
             numUniqueIdCols += uniqueIdCols.size();
             for (ColumnInfo col : uniqueIdCols)
             {
